issue450/test_split_variable_parts_2d_opset18_1.mlir.log
within split at ./issue450/test_split_variable_parts_2d_opset18_1.mlir.torch.mlir:1 offset :7:5: error: type of return operand 0 ('!torch.vtensor<[2,?],f32>') doesn't match function result type ('!torch.vtensor<[2,2],f32>') in function @test_split_variable_parts_2d_opset18
    return %2#0, %2#1 : !torch.vtensor<[2,2],f32>, !torch.vtensor<[2,4],f32>
    ^
within split at ./issue450/test_split_variable_parts_2d_opset18_1.mlir.torch.mlir:1 offset :7:5: note: see current operation: "func.return"(%8, %10) : (!torch.vtensor<[2,?],f32>, !torch.vtensor<[2,?],f32>) -> ()
